# pythonGPT

./: LICENSE.txt  README.md  notebook.ipynb  pyproject.toml  pythonGPT.py  requirments.txt  setup.cfg  setup.py
src/pythonGPT/: pythonGPT.py
src/pythonGPT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pythonGPT3.egg-info/: PKG-INFO  SOURCES.txt
