[metadata]
name = pythonGPT3
version = 1.0.0
author = Ahmed Sheded
author_email = sheded222@gmail.com
description = "The ChatGPT Requests module is a Python package that provides a convenient interface for making requests to the ChatGPT language model."
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://github.com/AhmedSheded/pythonGPT/issues
    repository = https://gitlab.com/AhmedSheded/pythonGPT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src